# Machine_Learning_Project

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: dataset_sources.md  project_plan.md  synthetic_data_audit.md
outputs/: ai4i_confusion_matrix.csv  ai4i_feature_importance.csv  ai4i_metrics.json  automotive_obd_ii_confusion_matrix.csv  automotive_obd_ii_feature_importance.csv  automotive_obd_ii_metrics.json  confusion_matrix.csv  feature_importance.csv  mendeley_confusion_matrix.csv  mendeley_feature_importance.csv  mendeley_metrics.json  metrics.json  obd_can_confusion_matrix.csv  obd_can_feature_importance.csv  obd_can_metrics.json  vehicle_maintenance_confusion_matrix.csv  vehicle_maintenance_feature_importance.csv  vehicle_maintenance_metrics.json
reports/: ai4i_experiment_summary.md  automotive_obd_ii_experiment_summary.md  demo_daily_report.md  final_project_presentation.pptx  final_project_report.html  mendeley_experiment_summary.md  obd_can_experiment_summary.md  project_conversation_summary.html  vehicle_maintenance_experiment_summary.md
schoolzone_adas_ws/src/astra_camera/astra_mini_calibration/: CMakeLists.txt  package.xml
schoolzone_adas_ws/src/astra_camera/astra_mini_calibration/config/: astra_mini_color.json
schoolzone_adas_ws/src/astra_camera/astra_mini_calibration/launch/: astra_mini_calibrated.launch.py  astra_mini_calibration.launch.py
schoolzone_adas_ws/src/astra_camera/astra_mini_calibration/scripts/: camera_info_from_json.py  cameracalibrator_with_save.py
scripts/: auto_git_push.sh  build_final_report.py  run_demo.py  (+3 more)
(+40 files in other folders)
