[project]
name = "vehicle-health-report"
version = "0.1.0"
description = "Driving behavior and vehicle condition analysis for daily inspection reports"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
]

[project.optional-dependencies]
ml = [
  "scikit-learn>=1.3",
]
dev = [
  "pytest>=8.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
